     * HQ9+ (Benny Baumann)
     * INTERCAL (Benny Baumann)
     * LOLcode (Benny Baumann)
     * LScript (Beau McGuigan)
     * Pixel Bender (Richard Olsson)
     * ProvideX (Jeff Wilder)
     * VIM Script (Swaroop C H)
     * Visual Prolog (Thomas Linder Puls)
     * Whitespace (Benny Baumann)
  -  Changed priority for COMMENT_REGEXP compared to String highlighting (BenBE)
  -  Added missing keywords to the Python language file, introducing support
     for Python 3.0. See SF#2441839
  -  Fixed correct escaping of spaces inside of URLs (BenBE)
  -  Updated the list of common file extensions (BenBE)
  -  Updated the language file check script in contrib/ (BenBE)
  -  Improvements to language files (BenBE)
     * eMail Header highlighting now uses the correct delimiters for keywords (BenBE)
     * eMail (RFC822\mbox) highlighting now highlights IPs, MIME types and
       subfield assignments correctly (BenBE)
     * Minor style changes in COBOL to improve loading performance (BenBE)
     * Added some missing keywords for D (BenBE)
     * Removed duplicate keywords from Progres, SAS and TSQL (BenBE)
     * Fixed Heredoc Syntax for Bash (SF#2185319, BenBE)
     * Moved symbol-lookalike sequences from keyword groups to separate symbol group
       for languages asp, klonec, klonecpp, php, php-brief (BenBE)
     * Fixed a lot of duplicate keyword warnings (BenBE)
Version 1.0.8.1
  -  Added language files
     * AviSynth (Ryan Jones)
     * eMail \ mbox (Benny Baumann)
     * GNU Make (Neil Bird)
     * Oracle 11i support (Simon Redhead)
     * Prolog (Benny Baumann)
     * SciLab (Christophe David)
     * TeraTerm macro language (Boris Maisuradze)
  -  Added support for Escape Regular Expressions (BenBE)
     * Implemented C-style Escapes in PHP (BenBE)
     * Introduced support for \xAB and \007 style Char Escapes in PHP (BenBE)
     * Implemented Variable Highlighting in PHP (BenBE)
     * Implemented Variable Highlighting in Bash (milian)